# wasi-ports

./: .gitignore  Dockerfile  generate.sh
.github/workflows/: build.yaml
goreturns/: generate.sh  pyproject.toml
goreturns/src/goreturns_wasi/: __init__.py
package-python/: build.sh
templates/: __init__.py  pyproject.toml
